logs/tipfy.ext.jsonrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/lovely'...
Listing './lib/python3.5/site-packages/lovely/jsonrpc'...
Compiling './lib/python3.5/site-packages/lovely/jsonrpc/dispatcher.py'...
***   File "./lib/python3.5/site-packages/lovely/jsonrpc/dispatcher.py", line 111
    print 'Attribute name conflict -- %s must be removed before attribute of the same name can be added'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lovely/jsonrpc/proxy.py'...
***   File "./lib/python3.5/site-packages/lovely/jsonrpc/proxy.py", line 96
    raise Exception, 'Unsupported scheme %r' % self.url.scheme
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/jsonrpc/testing.py'...
***   File "./lib/python3.5/site-packages/lovely/jsonrpc/testing.py", line 38
    print k, environ[k]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lovely/jsonrpc/wsgi.py'...
***   File "./lib/python3.5/site-packages/lovely/jsonrpc/wsgi.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lovely.jsonrpc-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tipfy'...
Listing './lib/python3.5/site-packages/tipfy/ext'...
Listing './lib/python3.5/site-packages/tipfy-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/tipfy.ext.jsonrpc-0.1.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
